--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^0.14.6",
     "react-chartist": "^0.10.1",
     "react-dom": "^0.14.6",
-    "react-google-maps": "^4.10.1"
+    "react-google-maps": "^4.10.1",
+    "react-slider": "^0.6.1"
   },
   "devDependencies": {
     "babel": "^6.3.26",
