--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-client",
+  "name": "bjss-shop",
   "version": "0.0.1",
-  "description": "Boilerplate React",
+  "description": "Currency changing shop",
   "main": "app.js",
   "scripts": {
     "test": "test.js",
@@ -10,15 +10,11 @@
   "dependencies": {
     "connect-history-api-fallback": "^1.2.0",
     "es6-promise": "^3.1.2",
-    "google-map-react": "^0.12.1",
     "http-proxy": "^1.12.0",
     "isomorphic-fetch": "^2.2.1",
     "marked": "^0.3.5",
     "react": "^0.14.6",
-    "react-chartist": "^0.10.1",
-    "react-dom": "^0.14.6",
-    "react-google-maps": "^4.10.1",
-    "react-slider": "^0.6.1"
+    "react-dom": "^0.14.6"
   },
   "devDependencies": {
     "babel": "^6.3.26",
