Basic react shop

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bjss-shop",
+  "name": "react-shop",
   "version": "0.0.1",
   "description": "Currency changing shop",
   "main": "app.js",
